create user controller and create user use case

--- a/.env
+++ b/.env
@@ -5,4 +5,28 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://smartlock:engcomp2675@smartlockdb.cydcv5k3sd7v.sa-east-1.rds.amazonaws.com:5432/smartlockDB"
-# DATABASE_URL="mysql://ownquest_admin:engcomp2675@own-quest-database.cydcv5k3sd7v.sa-east-1.rds.amazonaws.com:3306/own_quest"
+
+JWT_SECRET="smartlock-tcc-2023"
+
+NODE_ENV="development"
+
+VERIFICATION_SECRET="smartlock-verification-secret-validation"
+
+PORT="3000"
+
+# mail  
+MAIL_HOST=smtp.sendgrid.net
+MAIL_USER=apikey
+MAIL_PASSWORD=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
+MAIL_FROM=gabripalmyro@hotmail.com
+
+# tokens
+AT_SECRET="smartlock-jwt-secret-ifsp-at-2023"
+RT_SECRET="smartlock-jwt-secret-ifsp-rt-2023"
+
+#MQTT KEYS
+AWS_REGION=sa-east-1
+AWS_ACCESS_KEY_ID=I6AyoVl+VvYcbH8nXYo2p+5A5Jogu6yBqJ015omX
+AWS_SECRET_ACCESS_KEY=AKIARWLHOWHJISDCTHZ5
+AWS_IOT_ENDPOINT=awbnrs44qpthe-ats.iot.sa-east-1.amazonaws.com
+AWS_IOT_CLIENT_ID=mqtt_lock_broker
