--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tcc-smart-lock",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "name": "smartlock-ifsp-server",
+  "version": "0.1.0",
+  "description": "Smart Lock API",
+  "author": "Gabriel Palmyro & Carlos Henrique Zilioli Braga",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT LICENSE",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -17,23 +17,54 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "deploy": "npm ci && npm run build && npm run start:prod",
+    "pm2:deploy:app": "npm run build && pm2 start app.json",
+    "pm2:start:app": "pm2 start app.json",
+    "pm2:stop:app": "pm2 stop app.json",
+    "pm2:destroy:app": "pm2 delete app.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.327.0",
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.2",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
-    "@prisma/client": "^4.13.0",
+    "@nestjs/swagger": "^6.2.1",
+    "@prisma/client": "^4.10.1",
+    "@types/validator": "^13.7.12",
+    "aws-iot-device-sdk": "^2.2.12",
+    "aws-sdk": "^2.1373.0",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "crypto": "^1.0.1",
+    "handlebars": "^4.7.7",
+    "mqtt": "^4.3.7",
+    "nodemailer": "^6.9.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.3.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
+    "@types/nodemailer": "^6.4.7",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -42,7 +73,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
-    "prisma": "^4.13.0",
+    "prisma": "^4.10.1",
+    "prisma-erd-generator": "^1.2.4",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
