--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
+    "date-fns": "^2.30.0",
     "handlebars": "^4.7.7",
     "mqtt": "^4.3.7",
     "nodemailer": "^6.9.1",
