--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://smartlock:engcomp2675@smartlockdb.cydcv5k3sd7v.sa-east-1.rds.amazonaws.com:5432/smartlockDB"
+DATABASE_URL="postgresql://postgres:ifspbri2023@db.sgzsnilhuvppuidqrgwl.supabase.co:5432/postgres"
 
 JWT_SECRET="smartlock-tcc-2023"
 
