--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node -r ./tsconfig-paths-bootstrap.js dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -22,7 +22,8 @@
     "pm2:deploy:app": "npm run build && pm2 start app.json",
     "pm2:start:app": "pm2 start app.json",
     "pm2:stop:app": "pm2 stop app.json",
-    "pm2:destroy:app": "pm2 delete app.json"
+    "pm2:destroy:app": "pm2 delete app.json",
+    "heroku-postbuild": "NODE_ENV=dev npm install --omit --no-shrinkwrap && npm run build"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.327.0",
@@ -81,7 +82,7 @@
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.1",
+    "tsconfig-paths": "^4.1.1",
     "typescript": "^4.7.4"
   },
   "jest": {
