--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "pm2:start:app": "pm2 start app.json",
     "pm2:stop:app": "pm2 stop app.json",
     "pm2:destroy:app": "pm2 delete app.json",
-    "heroku-postbuild": "NODE_ENV=dev npm install --omit --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "NODE_ENV=dev ts-node -r tsconfig-paths/register ./node_modules/.bin/nest build"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.327.0",
@@ -82,7 +82,7 @@
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "^4.1.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.7.4"
   },
   "jest": {
