--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT LICENSE",
   "scripts": {
     "predeploy": "npm install && npm run build",
-    "prebuild": "rimraf dist",
+    "prebuild": "node_modules/.bin/rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/src/main.js",
@@ -47,6 +47,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^5.0.1",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.6.0"
   },
