--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "predeploy": "npm install && npm run build",
     "prebuild": "node_modules/.bin/rimraf dist",
-    "build": "nest build",
+    "build": "node_modules/.bin/nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/src/main.js",
     "dev": "nest start --watch",
@@ -53,7 +53,7 @@
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.3.0",
-    "@nestjs/cli": "^9.0.0",
+    "@nestjs/cli": "^9.5.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
