--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT LICENSE",
   "scripts": {
     "predeploy": "npm install && npm run build",
-    "prebuild": "node_modules/.bin/rimraf dist",
-    "build": "node_modules/.bin/nest build",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/src/main.js",
     "dev": "nest start --watch",
@@ -19,7 +19,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "heroku-postbuild": "npm install --production=false --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.327.0",
@@ -53,7 +54,7 @@
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.3.0",
-    "@nestjs/cli": "^9.5.0",
+    "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
